# meshtastic-python

./: .coderabbit.yml  .coveragerc  .gitignore  .gitmodules  .pylintrc  AGENTS.md  BLE.md  BLE_ASYNC_THREAD_ANALYSIS.md  BLE_OBSERVABILITY_GUIDE.md  BLE_REFACTORING_PLAN.md  CLI_TEST_CHECKLIST.md  CODERABBIT_SWEEP_CHECKLIST.md  COMPATIBILITY.md  CONTRIBUTING.md  DEPENDENCY_UPDATE_TRACKER.md  IMPLEMENTATION_PLAN.md  LICENSE.md  Makefile  PR_summary_simple.md  PR_summary_technical.md  README.md  REFACTOR_PROGRAM-2.md  REFACTOR_PROGRAM-PROGRESS.md  REFACTOR_PROGRAM.md  SMOKE1_FIRMWARE_COMPATIBILITY_MATRIX.md  ble-1114-1-plan.md  ble_connectionstate_refactor_plan.md  ble_refactoring_plan.md  ble_refactoring_progress.md  codecov.yml  coderabbit_actionable_items.md  example_config.yaml  hugelist.txt  library_refactor_plan.md  osv-scanner.toml  pass1_progress_temp.md  phase3-interfaces-plan.md  pyproject.toml  pyrightconfig.json  pytest.ini  (+4 more)
.codacy/: codacy.yaml
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/workflows/: api-baseline.yml  ci.yml  cleanup_artifacts.yml  pypi-publish.yml  release-assets.yml  release.yml  renovate-protobuf-submodule-regen.yml  update_protobufs.yml
.trunk/: trunk  trunk.yaml
.trunk/configs/: ruff.toml
examples/: ble_reconnect_instance_recreation_example.py  ble_reconnect_instance_reuse_example.py  get_hw.py  hello_world_serial.py  info_example.py  proxy_example.py  pub_sub_example.py  pub_sub_example2.py  reconnect_example.py  reconnect_instance_recreation_example.py  scan_for_devices.py  set_owner.py  show_ports.py  tcp_gps_example.py  waypoint.py
extra/: tuntest.py
meshtastic/: __init__.py  __main__.py  ble_interface.py  configure_verify.py  host_port.py  mesh_interface.py  mt_config.py  node.py  ota.py  proxy.py  remote_hardware.py  serial_interface.py  stream_interface.py  supported_device.py  tcp_interface.py  test.py  tunnel.py  util.py  version.py
meshtastic/analysis/: __main__.py
meshtastic/interfaces/: __init__.py
meshtastic/mesh_interface/: __init__.py
meshtastic/mesh_interface_runtime/: flows.py  (+7 more)
tests/: __init__.py  close-bug.py  conftest.py  tcp-test.py  test_ble_client_edge_cases.py  test_ble_connection_discovery_client_targets.py  test_ble_connection_edge_cases.py  test_ble_constants.py  test_ble_coordination.py  test_ble_gating.py  test_ble_integration_scenarios.py  test_ble_interface.py  test_ble_interface_advanced.py  test_ble_interface_core.py  test_ble_interface_coverage.py  test_ble_interface_disconnect_alias.py  test_ble_interface_fixtures.py  test_ble_lifecycle_controller.py  test_ble_lifecycle_receive_targets.py  test_ble_naming_compatibility.py  test_ble_notifications.py  test_ble_notifications_coverage.py  test_ble_policies.py  test_ble_runner.py  test_ble_state_manager.py  test_ble_utils.py  test_ble_utils_service_targets.py  test_retry_policy.py  test_tunnel_edge_cases.py  tuntest.py
(+204 files in other folders)
